Add images to an image folder and change location

--- a/recipes/katsudon.html
+++ b/recipes/katsudon.html
@@ -1,5 +1,5 @@
 <h1>Katsudon</h1>
-<img src="katsudon.webp" width="310" height="310" alt="A Soba Picture">
+<img src="images/katsudon.webp" width="310" height="310" alt="A Soba Picture">
 
 
 <h3>What is a delicious Katsudon ?</h3>
