--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -1,5 +1,5 @@
 <h1>Ramen</h1>
-<img src="ramen.avif" width="310" height="310" alt="A Ramen Picture">
+<img src="images/ramen.avif" width="310" height="310" alt="A Ramen Picture">
 
 
 <h3>What is a delicious Ramen ?</h3>
