--- a/recipes/soba.html
+++ b/recipes/soba.html
@@ -1,5 +1,5 @@
 <h1>Soba</h1>
-<img src="soba.webp" width="310" height="310" alt="A Soba Picture">
+<img src="images/soba.webp" width="310" height="310" alt="A Soba Picture">
 
 
 <h3>What is a delicious Soba ?</h3>
